index layout finishing

--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "autoprefixer": "^6.5.3",
     "node-sass": "^3.11.3",
     "postcss-cli": "^2.6.0"
+  },
+  "dependencies": {
+    "run": "^1.4.0"
   }
 }
